--- a/package.json
+++ b/package.json
@@ -1,40 +1,47 @@
 {
-    "name"        : "clamgate-bot",
-    "description" : "just-dice bot that calls the clamgate.com api",
-    "license"     : "Apache-2.0",
-    "homepage"    : "https://github.com/daxxog/clamgate-bot",
-    "main"        : "clamgate-bot.min.js",
-    "version"     : "0.0.1",
-    "engines": {
-        "node" : ">=0.10.33"
-    },
-    "maintainers": [{
-        "name"  : "David Volm",
-        "email" : "david@volminator.com",
-        "web"   : "http://daxxog.com/"
-    }],
-    "repository": {
-        "type" : "git",
-        "url"  : "https://github.com/daxxog/clamgate-bot.git"
-    },
-    "devDependencies": {
-        "bitfactory": "*",
-        "stoptime": "*",
-        "uglify-js": "*",
-        "vows": "*"
-    },
-    "scripts": {
-        "build": "node make.js",
-        "test": "vows test/*",
-        "start": "node cli.js",
-        "prepublish": "npm run build"
-    },
-    "files": [
-        "cli.min.js",
-        "clamgate-bot.min.js",
-        "bin/clamgate-bot"
-    ],
-    "bin": {
-        "clamgate-bot" : "bin/clamgate-bot"
+  "name": "clamgate-bot",
+  "description": "just-dice bot that calls the clamgate.com api",
+  "license": "Apache-2.0",
+  "homepage": "https://github.com/daxxog/clamgate-bot",
+  "main": "clamgate-bot.min.js",
+  "version": "0.0.1",
+  "engines": {
+    "node": ">=0.10.33"
+  },
+  "maintainers": [
+    {
+      "name": "David Volm",
+      "email": "david@volminator.com",
+      "web": "http://daxxog.com/"
     }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/daxxog/clamgate-bot.git"
+  },
+  "devDependencies": {
+    "bitfactory": "*",
+    "stoptime": "*",
+    "uglify-js": "*",
+    "vows": "*"
+  },
+  "scripts": {
+    "build": "node make.js",
+    "test": "vows test/*",
+    "start": "node cli.js",
+    "prepublish": "npm run build"
+  },
+  "files": [
+    "cli.min.js",
+    "clamgate-bot.min.js",
+    "bin/clamgate-bot"
+  ],
+  "bin": {
+    "clamgate-bot": "bin/clamgate-bot"
+  },
+  "dependencies": {
+    "just-bot": "0.0.2",
+    "request": "^2.60.0",
+    "string": "^3.3.0"
+  }
 }
